--- a/PEData/assets/css/main.css
+++ b/PEData/assets/css/main.css
@@ -317,7 +317,7 @@ input, select, textarea {
 	}
 
 		a:hover {
-			color: #4696e5;
+			color: #3b3b3b;
 		}
 
 	strong, b {
@@ -1968,7 +1968,7 @@ input, select, textarea {
 		button.primary,
 		.button.primary {
 			box-shadow: none;
-			background-color: #4696e5;
+			background-color: #3b3b3b;
 			color: #ffffff !important;
 		}
 
@@ -2173,8 +2173,8 @@ input, select, textarea {
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #4696e5;
-			box-shadow: 0 0 0 1px #4696e5;
+			border-color: #3b3b3b;
+			box-shadow: 0 0 0 1px #3b3b3b;
 		}
 
 	.select-wrapper:before {
@@ -2979,7 +2979,7 @@ input, select, textarea {
 				.wrapper.style1 .button.primary {
 					box-shadow: none;
 					background-color: #ffffff;
-					color: #4696e5 !important;
+					color: #3b3b3b !important;
 				}
 
 			.wrapper.style1 label {
@@ -3024,7 +3024,7 @@ input, select, textarea {
 			.wrapper.style1 input[type="radio"]:checked + label:before {
 				background-color: #ffffff;
 				border-color: #ffffff;
-				color: #4696e5;
+				color: #3b3b3b;
 			}
 
 			.wrapper.style1 input[type="checkbox"]:focus + label:before,
@@ -3058,7 +3058,7 @@ input, select, textarea {
 			}
 
 			.wrapper.style1 .image {
-				box-shadow: 0 0 0 4px #4696e5, 0 0 0 5px rgba(255, 255, 255, 0.25);
+				box-shadow: 0 0 0 4px #3b3b3b, 0 0 0 5px rgba(255, 255, 255, 0.25);
 			}
 
 				.wrapper.style1 .image.phone {
@@ -3173,7 +3173,7 @@ input, select, textarea {
 				.wrapper.style2 button.primary,
 				.wrapper.style2 .button.primary {
 					box-shadow: none;
-					background-color: #4696e5;
+					background-color: #3b3b3b;
 					color: #ffffff !important;
 				}
 
@@ -3190,7 +3190,7 @@ input, select, textarea {
 					.wrapper.style2 input[type="button"].primary:active,
 					.wrapper.style2 button.primary:active,
 					.wrapper.style2 .button.primary:active {
-						background-color: #3089e2;
+						background-color: #3b3b3b;
 					}
 
 			.wrapper.style2 label {
@@ -3212,8 +3212,8 @@ input, select, textarea {
 				.wrapper.style2 input[type="email"]:focus,
 				.wrapper.style2 select:focus,
 				.wrapper.style2 textarea:focus {
-					border-color: #4696e5;
-					box-shadow: 0 0 0 1px #4696e5;
+					border-color: #3b3b3b;
+					box-shadow: 0 0 0 1px #3b3b3b;
 				}
 
 			.wrapper.style2 .select-wrapper:before {
@@ -3233,8 +3233,8 @@ input, select, textarea {
 
 			.wrapper.style2 input[type="checkbox"]:checked + label:before,
 			.wrapper.style2 input[type="radio"]:checked + label:before {
-				background-color: #4696e5;
-				border-color: #4696e5;
+				background-color: #3b3b3b;
+				border-color: #3b3b3b;
 				color: #ffffff;
 			}
 
@@ -3611,8 +3611,12 @@ input, select, textarea {
 /* Header */
 
 	#header {
+		/* 
 		background-color: #4696e5;
 		color: #d1e5f9;
+		*/
+		background-color: #3b3b3b;
+		color: #ededed;
 		padding: 4.5em 0 2.5em 0 ;
 		-moz-align-items: center;
 		-webkit-align-items: center;
@@ -3667,7 +3671,7 @@ input, select, textarea {
 			#header .button.primary {
 				box-shadow: none;
 				background-color: #ffffff;
-				color: #4696e5 !important;
+				color: #3b3b3b !important;
 			}
 
 		#header label {
@@ -3712,7 +3716,7 @@ input, select, textarea {
 		#header input[type="radio"]:checked + label:before {
 			background-color: #ffffff;
 			border-color: #ffffff;
-			color: #4696e5;
+			color: #3b3b3b;
 		}
 
 		#header input[type="checkbox"]:focus + label:before,
@@ -3746,7 +3750,7 @@ input, select, textarea {
 		}
 
 		#header .image {
-			box-shadow: 0 0 0 4px #4696e5, 0 0 0 5px rgba(255, 255, 255, 0.25);
+			box-shadow: 0 0 0 4px #3b3b3b, 0 0 0 5px rgba(255, 255, 255, 0.25);
 		}
 
 			#header .image.phone {
@@ -4092,7 +4096,7 @@ input, select, textarea {
 		}
 
 			#footer a:hover {
-				color: #4696e5;
+				color: #3b3b3b;
 			}
 
 		#footer strong, #footer b {
